[gd_scene load_steps=5 format=2]

[ext_resource path="res://Games/RocketEscape/Platform/Platform.gd" type="Script" id=1]
[ext_resource path="res://Games/RocketEscape/Platform/LeftSegment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Games/RocketEscape/Platform/MiddleSegment.tscn" type="PackedScene" id=3]
[ext_resource path="res://Games/RocketEscape/Platform/RightSegment.tscn" type="PackedScene" id=4]

[node name="Platform" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftSegment" parent="." instance=ExtResource( 2 )]

[node name="MiddleSegment" parent="." instance=ExtResource( 3 )]

[node name="RightSegment" parent="." instance=ExtResource( 4 )]
